update to new version

--- a/publics/history.html
+++ b/publics/history.html
@@ -12,10 +12,12 @@
 	<link rel="stylesheet" href="css/common.css" type="text/css" media="all"/>		
 <style>
 	table.dataTable thead th{
-		background-color: #4A9FF0;
-		color: #fff;
-		height: 22px;
-		overflow: hidden;
+	    background-color: #4A9FF0;
+	    border: 1px solid #2E83E0;
+	    color: #FFFFFF;
+	    font-weight: bold;
+	    text-align: left;
+	    vertical-align: top;
 	}
 </style>
 </head>
