--- a/publics/query.html
+++ b/publics/query.html
@@ -65,7 +65,7 @@
 		<div class="row sqlRow">
 			<div class="span3 sqlSider">
 				<p class="treeOp">
-					<a class="treeDown" href="javascript:void(0);"><span class="sqlSIcon addIcon"></span>全部展开</a></li>
+					<a class="treeDown" href="javascript:void(0);"><span class="sqlSIcon addIcon"></span>全部展开</a>
 					<a class="treeUp" href="javascript:void(0);"><span class="sqlSIcon delIcon"></span>全部收缩</a>
 				</p>
 
